--- a/speech-api.html
+++ b/speech-api.html
@@ -81,19 +81,13 @@
                         <option value="es-ES">Spanish - ES</option>
                     </select>
 
-                    <button class="mic demo_btn demo_btn_circle demo_btn_mic">HELLO</button>
-                    <button class="miccheck">Wazzup</button>
+                    <button class="mic demo_btn demo_btn_circle demo_btn_mic">Start</button>
                     <div id="microphoneText">
                         Click on the microphone to start speaking.
                     </div>
 
                     <div class="textarea" id="messages"></div>
                     
-                    <script>
-                        $('.miccheck').click(function (){
-                            console.log('hoooo');
-                        });
-                    </script>
 
 
                 </div>
@@ -106,10 +100,10 @@
 
 
 
-    <script src="/scripts/main.js" type="text/javascript"></script>
-    <script src="/scripts/ws.js" type="text/javascript"></script>
-    <script src="/scripts/recorder.js" type="text/javascript"></script>
-    <script src="/scripts/index.js" type="text/javasciprt"></script>
+    <script src="../scripts/main.js" type="text/javascript"></script>
+    <script src="../scripts/ws.js" type="text/javascript"></script>
+    <script src="../scripts/recorder.js" type="text/javascript"></script>
+    <script src="../scripts/index.js" type="text/javasciprt"></script>
     
     <script src="C:\Users\tireilly\OneDrive\d\JavaScript\BigHacks\scripts\index.js" type="text/javascript"></script>
     <script src="C:\Users\tireilly\OneDrive\d\JavaScript\BigHacks\scripts\main.js" type="text/javascript"></script> 
